--- a/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
@@ -58,6 +58,17 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     
         <br>
+        <form class="form-horizontal" id="puesto" >
+               <!--th:object="${puesto}" -->
+            
+            <div class="col-md-12" style="background-color:#d9edf7;">
+                <div class="panel-info">
+                    <div class="panel-heading row text-center">
+                        <h3>Gestionando informacion del empleado:  <label id="nomemp" class=" control-label" th:text="${puesto}"></label> </h3>
+                    </div>
+                </div>
+            </div>
+            </form>
           <form class="form-horizontal" id="formempleado" th:object="${empleado}" >
             
             <div class="col-md-12" style="background-color:#d9edf7;">
@@ -74,10 +85,21 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <!--<input type="hidden" id="codem"  />-->
             <div class="col-md-12" >
                  <div class="form-group">
+                    <label class="col-sm-3 control-label">Marcar si la Experiencia es en el Ministerio de Justicia(*):</label>
+                    <div class="col-sm-2">
+                        <input type="checkbox"  onclick="chek()" id="check"   required="true"    />
+                    </div>
+                    <div class="popup "><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup131')" onmouseout ="javascript:ocultarAyuda('poppup131')">a</a></b>
+                        
+                        <span class="popuptext" id="poppup131">Marcar si la experiencia es dentro del Ministerio de Justicia.!</span>
+                    </div>
+                </div>
+                 <div class="form-group">
                      <br>
                 <label class="col-sm-3 control-label">Sector(*):</label>
                 <div class="col-sm-5">
-                    <select class="form-control" name="sectorexperiencialaboral" th:field="*{sectorexperiencialaboral}"> 
+                    <select class="form-control" name="sectorexperiencialaboral" id="selectsector" th:field="*{sectorexperiencialaboral}"> 
                         <!--th:field="*{sectorexperiencialaboral}">-->
                          <option value="0">--seleccione el sector de la experiencia laboral--</option>
                         <option value="Privado">Privado</option>
@@ -93,7 +115,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                  <div class="form-group">
                     <label class="col-sm-3 control-label">Nombre de institución(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"  required="true" size="50" maxlength="50"  th:field="*{nombreinstitucion}"  />
+                        <input type="text" class="form-control" id="nombreinstitucion" required="true" size="50" maxlength="50"  th:field="*{nombreinstitucion}"  />
                     </div>
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup13')" onmouseout ="javascript:ocultarAyuda('poppup13')">a</a></b>
@@ -104,7 +126,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Cargo(*):</label>
                     <div class="col-sm-6">
-                        <input type="text" class="form-control"  required="true" size="200" maxlength="200" th:field="*{cargo}"   />
+                        <input type="text" class="form-control"  id="cargonom" required="true" size="200" maxlength="200" th:field="*{cargo}"   />
                     </div>
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup25')" onmouseout ="javascript:ocultarAyuda('poppup25')">a</a></b>
@@ -224,6 +246,21 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <script src="../static/css/hydro/js/jquery.js"></script>
 	        
     	<script>
+           
+             function chek(){
+                  var checkbox = document.getElementById('check');
+                    if (checkbox.checked != true)
+                    {
+                       document.getElementById('selectsector').value='Privado';
+                       document.getElementById('nombreinstitucion').value='';
+                        $('#nombreinstitucion').prop('disabled', false);
+                    
+                    }else{
+                       document.getElementById('selectsector').value='Publico';
+                       document.getElementById('nombreinstitucion').value='Ministerio de Justicia';
+                       $('#nombreinstitucion').prop('disabled', 'disabled');
+                    }
+                               }
              function Fechas(val1,val2,val3,val4){
                         var foo=ValidarFecha(val1,val2,val3,val4).split(",");;
                         if(foo[0]!=foo[2]){
@@ -305,6 +342,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 		    var currentMonth = date.getMonth();
 		    var currentDate = date.getDate();
 		    var currentYear = date.getFullYear();
+                    $('#cargonom').val('[[${puesto}]]' );
+                    $('#salarioinicial').val('[[${salario}]]' );
                     
 		    $('#fechadexlaborald').datepicker({
 // 		        minDate: new Date(currentYear, currentMonth, currentDate),
@@ -392,8 +431,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
             
         });
+        
 		
 	</script>
+        
            <script th:inline="javascript">
     $(document).ready(function () {
     if([[${msg}]]===0){
