--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9e2a8e50-efd2-42d9-ab62-dda75ce1c952">
 	<property name="ireport.zoom" value="1.3310000000000006"/>
-	<property name="ireport.x" value="266"/>
+	<property name="ireport.x" value="53"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -16,7 +16,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select  concat(e.nombreempleado, ' ', e.apellidoempleado) as Empleado,p.nombrepuesto,m.nombremision,m.objetivomision,DATE_FORMAT(m.fechasalidamision, '%d/%m/%Y') as Desde, DATE_FORMAT(m.fecharegresomision, '%d/%m/%Y') as Hasta,m.departamentomision from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join puesto p on e.codigopuesto=p.codigopuesto
+		<![CDATA[select  concat(e.nombreempleado, ' ', e.apellidoempleado) as Empleado,p.nombrepuesto,m.nombremision,m.objetivomision,DATE_FORMAT(m.fechasalidamision, '%d/%m/%Y') as Desde, DATE_FORMAT(m.fecharegresomision, '%d/%m/%Y') as Hasta from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join puesto p on e.codigopuesto=p.codigopuesto
 where  m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechasalidamision<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') and tipomision =2]]>
 	</queryString>
 	<field name="Empleado" class="java.lang.String"/>
@@ -31,9 +31,9 @@ where  m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechas
 	</field>
 	<field name="Desde" class="java.lang.String"/>
 	<field name="Hasta" class="java.lang.String"/>
-	<field name="departamentomision" class="java.lang.String">
+	<!--field name="departamentomision" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
+	</field-->
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -163,39 +163,32 @@ where  m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechas
 				<reportElement x="54" y="1" width="687" height="17" uuid="c6cb9a22-0273-4779-b77c-f1b297ccf08a"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="50" y="0" width="59" height="17" uuid="938d790d-6b9d-4af6-8c5f-30a8035aa622"/>
+				<reportElement x="46" y="0" width="59" height="17" uuid="938d790d-6b9d-4af6-8c5f-30a8035aa622"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="163" y="0" width="45" height="17" uuid="9132f985-7e2e-4665-b844-dbc536e18415"/>
+				<reportElement x="168" y="0" width="45" height="17" uuid="9132f985-7e2e-4665-b844-dbc536e18415"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="287" y="0" width="52" height="17" uuid="8cb599ec-5f63-4ed1-99f1-1aa16d4e9d95"/>
+				<reportElement x="296" y="0" width="52" height="17" uuid="8cb599ec-5f63-4ed1-99f1-1aa16d4e9d95"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Misión]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="398" y="0" width="55" height="17" uuid="b9958f6d-f205-489c-8bcf-14307b18299c"/>
+				<reportElement x="440" y="2" width="55" height="17" uuid="b9958f6d-f205-489c-8bcf-14307b18299c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Objetivo]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="517" y="0" width="90" height="17" uuid="3bf28f6b-dbc1-456e-81b1-36c8e0bef1f6"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Deparatamento]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="623" y="0" width="54" height="17" uuid="97387aca-cd7f-4443-958e-68c3cc3ee73e"/>
@@ -205,23 +198,20 @@ where  m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechas
 				<text><![CDATA[Misión Inicio]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="682" y="2" width="54" height="17" uuid="6f7f69f8-0340-4226-9155-2923b07ba1fa"/>
+				<reportElement x="679" y="0" width="54" height="17" uuid="6f7f69f8-0340-4226-9155-2923b07ba1fa"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Misión Fin]]></text>
 			</staticText>
 			<line>
-				<reportElement x="162" y="2" width="1" height="17" uuid="52abf13c-5314-4916-93bf-23c6ded12e2c"/>
+				<reportElement x="174" y="2" width="1" height="17" uuid="52abf13c-5314-4916-93bf-23c6ded12e2c"/>
 			</line>
 			<line>
-				<reportElement x="286" y="3" width="1" height="17" uuid="5da73736-3a0e-4250-b9c5-f4ce423bc8e4"/>
+				<reportElement x="305" y="1" width="1" height="17" uuid="5da73736-3a0e-4250-b9c5-f4ce423bc8e4"/>
 			</line>
 			<line>
-				<reportElement x="392" y="2" width="1" height="17" uuid="dc52d9c6-5c92-44ae-af4a-67dd1fc20900"/>
-			</line>
-			<line>
-				<reportElement x="516" y="1" width="1" height="17" uuid="71e86fe0-4ec0-4775-a3c7-47019a32601d"/>
+				<reportElement x="448" y="2" width="1" height="17" uuid="dc52d9c6-5c92-44ae-af4a-67dd1fc20900"/>
 			</line>
 			<line>
 				<reportElement x="681" y="1" width="1" height="17" uuid="5b68db4c-0de3-4e8b-8f6f-5bb9b5b60084"/>
@@ -234,32 +224,25 @@ where  m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechas
 	<detail>
 		<band height="14" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="176" y="0" width="100" height="14" uuid="99d95030-5d1c-4eea-81e2-69aa4bb04f10"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="176" y="0" width="120" height="14" uuid="99d95030-5d1c-4eea-81e2-69aa4bb04f10"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="301" y="0" width="100" height="14" uuid="cc1a166a-f1a5-4ff6-a98f-499daf1c5959"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="309" y="0" width="131" height="14" uuid="cc1a166a-f1a5-4ff6-a98f-499daf1c5959"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombremision}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="413" y="0" width="100" height="14" uuid="623007a8-c4fd-4a36-a5b2-8dda3fb4a47f"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="452" y="0" width="168" height="14" uuid="623007a8-c4fd-4a36-a5b2-8dda3fb4a47f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{objetivomision}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="526" y="0" width="91" height="14" uuid="aa722cd9-54ef-47d5-8052-7daf433e83ea"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{departamentomision}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="54" y="0" width="100" height="14" uuid="91e881fc-d4a9-4924-89a8-a13f90bb11d3"/>
