--- a/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
@@ -34,7 +34,7 @@
                      <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha inicial:</label>
                         <div class="col-sm-3">
-                    <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechafinal" id="fechafinal" onchange="isDat(this.value,'fechafinal');Fechas($('#fechainicial').val().toString(),this.value,'fechainicial','fechafinal')" />
+                    <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechainicial" id="fechainicial" onchange="isDat(this.value,'fechainicial');Fechas($('#fechainicial').val().toString(),this.value,'fechainicial','fechafinal')" />
                          </div>
                         <label class="col-sm-2 control-label">Fecha final:</label>
                         <div class="col-sm-3">
