--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_comisiones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_comisiones.jrxml
@@ -20,7 +20,7 @@
 	</parameter>
 	<queryString>
 		<![CDATA[select concat(e.nombreempleado,' ',e.apellidoempleado) as Nombre,p.nombrepuesto,c.numeroacuerdocomision,c.nombrecomision,DATE_FORMAT(c.fechadesdecomision, '%d/%m/%Y') as Desde,DATE_FORMAT(c.fechahastacomision, '%d/%m/%Y') as Hasta from empleado e INNER JOIN puesto p on e.codigopuesto=p.codigopuesto INNER join comision c on e.codigoempleado=c.codigoempleado
-WHERE  c.fechadesdecomision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
+WHERE e.estadoempleado!=0 and e.estadoempleado!=2 and p.estadopuesto!=0 and c.estadocomision!=0 and c.fechadesdecomision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
 and c.fechadesdecomision<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	</queryString>
 	<field name="Nombre" class="java.lang.String"/>
